# StretchBreak

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  icons.toml
.github/workflows/: linux-binary.yml  release-artifacts.yml  rust.yml  vendor-artifacts.yaml
meta/: io.github.pieterdd.StretchBreak.Core.service  io.github.pieterdd.StretchBreak.Core.service-flatpak  io.github.pieterdd.StretchBreak.desktop  io.github.pieterdd.StretchBreak.metainfo.xml  logo-sized.afdesign  logo.afdesign
src/: dbus.rs  main.rs
src/backend/: file_io.rs  idle_monitoring.rs  mod.rs
src/frontend/: break_window.rs  formatting.rs  main_window.rs  mod.rs
src/gnome-extension/: extension.js  metadata.json  stylesheet.css
