[package]
name = "stretch-break"
version = "0.1.3"
edition = "2024"
exclude = [
    ".vscode",
]
description = "Helps you take regular breaks from using your computer."
license = "GPL-3.0-or-later"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stretch-break", dest = "/usr/bin/stretch-break", mode = "0755" },
    { source = "meta/io.github.pieterdd.StretchBreak.desktop", dest = "/usr/share/applications/", mode = "0644" },
    { source = "meta/logo-color-128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.pieterdd.StretchBreak.png", mode = "0644" },
    { source = "meta/io.github.pieterdd.StretchBreak.Core.service", dest = "/usr/share/dbus-1/services/", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.18.4"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5", "v1_7"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.38", features = ["cargo", "derive"] }
gtk = { version = "0.9.6", package = "gtk4" }
relm4 = { version = "0.9.1", features = ["gnome_47", "libadwaita"] }
relm4-icons = "0.9.0"
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
single-instance = "0.3.3"
tokio = { version = "1.44.2", features = ["full", "sync", "time"] }
tracing = "0.1.41"
user-idle2 = "0.6.2"
zbus = "5.5.0"

[dev-dependencies]
mockall = "0.13.1"
